@@ -4,6 +4,10 @@
 	Patch thanks to David Ross <H.David.Ross@gmail.com>.
 	Add autoload stanzas to more variables.
 	(epackage-assoc): Rename from `epackage-asscoc'.
+	(epackage-narrow-to-field): implement function.
+	(epackage-field-forward): New.
+	(epackage-field-backward): New.
+	(epackage-field-name): Add arg region.
 
 2011-11-18 Fri  Jari Aalto  <jari.aalto@cante.net>
 
